--- a/data/Upload_data.ipynb
+++ b/data/Upload_data.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
    ],
    "source": [
     "# Read the data to be uploaded\n",
-    "csv_file=\"data\\\\akg_data.csv\"  # provide the file locaton to be upload \n",
+    "csv_file=\"akg_data.csv\"  # provide the file locaton to be upload \n",
     "def read_doc(txt_file):\n",
     "    loader = CSVLoader(file_path=txt_file,\n",
     "        csv_args={\n",
